updated Reorg info for 2021

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Shelby County Democrats
 }(document, 'script', 'facebook-jssdk'));</script>
 <div id="special">
   <!-- <a href="/collinsdinner.html">You are invited to the 4th annual Governor Martha Layne Collins Dinner!</a> -->
-  <a href="/reorg.html">2020 Shelby County Democratic Party Reorganization</a>
+  <a href="/reorg.html">Shelby County Democratic Party Virtual Reorganization</a>
 </div>
 <div class="heroimage">
   <!-- "Gallrein Farm" by Pen Waggener is licensed under CC BY 2.0/ Cropped from Original/ taken from "https://www.flickr.com/photos/epw/1472117143/in/photolist-5rNLJE-9SjzPC-dYEz4B-9SgHRT-3f5Z94-ctw9FS" -->
