--- a/reorg.html
+++ b/reorg.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 2020 Shelby County Democratic Party Reorganization
+title: Shelby County Democratic Party Virtual Reorganization
 ---
 
 <div class="reorg-hero">
@@ -10,41 +10,33 @@ title: 2020 Shelby County Democratic Party Reorganization
       <div class="reorg__dates">
         <h4 class="reorg__title">Precinct<br>Convention</h4>
         <p>
-          Saturday, March 21st<br>
-          10:00 A.M.<br>
-          Stratton Community Center<br>
-          215 Washington Street<br>
-          Shelbyville, KY 40065
+          Nominations: March 15 - April 12<br>
+          Call to Order: April 10<br>
+          Voting: April 15 - April 17<br>
+          Results: April 21<br>
         </p>
       </div>
       <div class="reorg__dates">
         <h4 class="reorg__title">County<br>Convention</h4>
         <p>
-          Saturday, April 18th<br>
-          10:00 A.M.<br>
-          Stratton Community Center<br>
-          215 Washington Street<br>
-          Shelbyville, KY 40065
+          Nominations: April 29 - May 10<br>
+          Call to Order: May 10<br>
+          Voting: May 15 - May 18<br>
+          Results: May 21<br>
         </p>
       </div>
       <div class="reorg__dates">
-        <h4 class="reorg__title">County<br>Caucus</h4>
+        <h4 class="reorg__title">Congressional<br>Convention</h4>
         <p>
-          Saturday, May 30th<br>
-          10:00 A.M.<br>
-          Stratton Community Center<br>
-          215 Washington Street<br>
-          Shelbyville, KY 40065
+          Nominations: June 5 - June 26<br>
+          Call to Order and Voting: June 26<br>
         </p>
       </div>
       <div class="reorg__dates">
         <h4 class="reorg__title">State<br>Convention</h4>
         <p>
-          Saturday, June 6th<br>
-          2:00 P.M.<br>
-          Kentucky Convention Center<br>
-          221 S 4th Street<br>
-          Louisville, KY 40202
+          Nominations: June 5 - June 26<br>
+          Call to Order and Voting: June 26<br>
         </p>
       </div>
     </div>
@@ -52,15 +44,21 @@ title: 2020 Shelby County Democratic Party Reorganization
 </div>
 <div class="content-container">
   <div class="info-container">
-    <div class="info">Every four years, Kentucky Democrats rebuild our party through a process called Reorganization. Starting from the ground up, we select new bodies to govern the party – from precincts to county and, finally, to the state level.</div>
-    <div class="info">Additionally, we go through a Delegate Selection process as part of the Presidential Primary process, by which delegates are elected to the District and State Conventions, and – ultimately – to the National Convention in Milwaukee, WI.</div>
-    <div class="info">The Party Reorganization begins with Precinct Conventions on March 21, 2020. Nominations will be taken at the Precinct Convention, or <a href="https://kydemocrats.org/2020-reorg-delegate-selection/precinct-member/">you can nominate yourself ahead of time here.</a></div>
+    <div class="info">Reorganization is the process of electing new bodies within the Kentucky Democratic Party, from the precincts to counties (and legislative districts if you live in Fayette or Jefferson County) and, finally, to the state level. This process normally takes place during presidential election years; however, because of COVID-19, we moved it to 2021. Because we are still in a pandemic, all meetings, nominations and voting for Reorganization will take place virtually. In all steps, we are enabling Democrats to participate via electronic nominating and voting, or over the phone.</div>
+
+    <div class="info">The process happens in these steps:
+      <ul>
+        <li>Precinct Conventions</li>
+        <li>County Conventions</li>
+        <li>Congressional District Conventions</li>
+        <li>State Convention</li>
+      </ul>
+      </div>
     <div>
       <div class="reorg-info">
         <div class="reorg-info-block">
           <h5>Precinct Convention</h5>
-          <p>Every four years, the Kentucky Democratic Party rebuilds the party from the neighborhood to the state level. There are several levels of involement within the Democratic Party: the Precinct Committee, the County Executive Committee, and the State Central Executive Committee. Electing members to these committees is done through a series of conventions held across the Commonwealth.</p>
-          <p>The Precinct Committee is the backbone of the Democratic Party, and the first level of involement. The Precinct Committee is elected at the Precinct Convention. The Precinct Committees are made up of one man, one woman, and one youth (35 years or younger) to represent the Democrats in the precint in a variety of ways. We encourage all registered Democrats in the precinct to run, nominate, or vote in their precinct conventions.</p>
+          <p>All Democrats who are registered to vote prior to April 8, 2021 can participate in the precinct conventions. During the precinct conventions, a Precinct Committee is elected for every precinct (the lowest defined voting district). The Precinct Committee is made up of a man, woman, and youth member (35 years of age or younger). Non-binary persons are taken into consideration in the process. You may nominate yourself or another Democrat in your precinct beginning on March 15, 2021. Sign up at the link above to get a reminder when the nominations open. Precinct conventions are called to order in a statewide virtual event on April 10, nominations close on April 12, and voting takes place April 15-17. Results of who was elected to the Precinct Committee are available on April 21. All Democrats who participated in the precinct convention (even if they’re not on the Committee) will then vote on a Chair – choosing between the members who were elected to the Precinct Committee. The nominating and voting processes for a Precinct Committee Chair take place between April 22-26. Results of the Precinct Chair elections are available on April 28, thus concluding the precinct conventions.</p>
         </div>
         <div class="reorg-info-block">
           <img src="assets/img/precinct.png" alt="">
@@ -72,88 +70,29 @@ title: 2020 Shelby County Democratic Party Reorganization
         </div>
         <div class="reorg-info-block">
           <h5>County Convention</h5>
-          <p>The County Executive Committee is the next level of involvement in the Party. The County Executive Committee is responsible for all Democratic functions in their county. The committee members hold fundraisers, have candidate rallies, work at booths at local festivals, and maintain other Democratic functions in their county.</p>
-          <p>The County Executive Committee is elected at the County Convention on April 18th at 10:00 am at the Stratton Community Center. The Precinct Committee members elected at the Precinct Conventions meet to elect no more than 20 Democrats (must be equally divided by gender and include one person 35 years old or younger) to serve on the County Democratic Executive Committee. at the beginning of the County Convention, the Temporary Convention Chair (approved by the County Chair) reads the Opening Statement and presides over the elction for the Permanent Convention Chair. The Permanent Convention Chair presides over the election of the Executive Committee. A Chair and Vice Chair of the County Executive Committee are also elected of the opposite sex.</p>
-          <p>Delegates and Alterates to the Congressional District and State Conventions are also elected at the County Convention. These delegates attend the Congressional District and State Conventions to elect members of the State Central Executive Committee, the governing body of the Kentucky Democratic Party. Any registered Democrat may attend, particiapte in and be elected to the County Executive Committee.</p>
+          <p>The Precinct Committee members nominate and vote in the county conventions. During the county conventions, the following elections take place:</p>
+          <ul>
+            <li>County Executive Committee Members,</li>
+            <li>Delegates and alternate(s) from your county to serve at the District and State Conventions, and</li>
+            <li>A representative and an alternate from your county to serve on the Credentials Committee to the District and State Conventions.</li>
+          </ul>
+          <p>County Executive Committees consist of equal numbers of men and women, with at least 10 people and no more than 20 (unless your County Executive Committee is already larger than that). Non-binary persons will be taken into consideration in the voting process.</p>
+          <p>Only Precinct Committee members can nominate and vote on the positions above; however, any Democrat registered by April 8, 2021 can run for any of those positions. Nominations take place between April 29 – May 10, 2021. The county conventions will be called to order in a statewide, virtual event on May 10, 2021. Voting takes place between May 15-18. Results are posted on May 21.</p>
+          <p>At that point, the newly elected County Executive Committee can nominate a County Chair and Vice Chair between May 23-24, and nominees are notified on May 25. The County Chair and Vice Chair both must have been elected to the County Executive Committee, and must be of opposite genders. The newly elected County Executive Committees are responsible for calling a meeting to then hold the elections. This meeting must take place after May 25 and before June 4, 2021, and it must be virtual with the option for people to call-in. The KDP staff and Reorganization Committee and volunteers are on-hand to assist in those meetings and voting.</p>
         </div>
       </div>
       <div class="reorg-info">
         <div class="reorg-info-block">
-          <h5>County Caucus</h5>
-          <p>On May 30th, each county meets to elect delegates to the Congressional District Caucus and State Convention. These delegates are allocated by the Democratic Registration and Democratic turnout in the two most recent Presidential Elections.</p>
-          <p>At the meeting, any Democrat registered by March 19th is allowed to run, nominate, or vote for delegates. As Democrats enter the caucus, they will be asked to sign a statement of support for a Presidential candidate or for the uncommitted status. These statements are available at the Caucus. The Kentucky Democratic Party provides ballots with the names of individuals seeking to be a delegate, along with which Presidential candidate they pledged to support. At the Caucus, those present elect delegates to the Cognressional Caucuses and the State Convention according to the allocation by county or legislative district.</p>
+          <h5>Congressional District Conventions</h5>
+          <p>The delegates elected during the county or LD conventions nominate and vote in the congressional district conventions (often referred to as just “district conventions.”) During the district conventions, five (5) Democrats from the Congressional District are elected to serve on the State Central Executive Committee (SCEC). The five Congressional District members on SCEC are two (2) men, two (2) women, and one (1) youth (age 35 or younger). Nominations for District representatives on State Central are open between June 5-26. Any Democrat registered by April 8 can run for any of these five positions. The district conventions take place on June 26 at 10 am ET via webinar with a call-in option. Additional nominations may be taken from the floor. People who are nominated have an allotted time to make a speech or can submit a recording or written statement. Ballots are then distributed electronically for immediate voting, with a call-in option.</p>
         </div>
         <div class="reorg-info-block">
-          <img src="assets/img/countycaucus.png" alt="">
+          <h5>State Convention</h5>
+          <p>The delegates elected during the County or LD Conventions nominate and vote in the State Convention. During the State Conventions, nine (9) Democrats are elected to serve as At-Large members on the State Central Executive Committee (SCEC). Nominations for At-Large State Central members are open between June 5-26. Any Democrat registered by April 8 can run for any of these nine positions. The State Convention takes place on June 26 at 2 pm ET via webinar with a call-in option. Additional nominations may be taken from the floor. People who are nominated have an allotted time to make a speech or can submit a recording or written statement. Ballots are then distributed electronically for immediate voting, with a call-in option.</p>
         </div>
       </div>
       <div class="reorg-info">
-        <div class="reorg-info-block">
-          <img src="assets/img/state.png" alt="">
-        </div>
-        <div class="reorg-info-block">
-          <h5>State Convention and Congressional Caucus</h5>
-          <p>The Kentucky Democratic Party is structured with a board (“State Central Executive
-Committee” or “State Central” for short), led by the party officers (Chair, Vice Chair, Treasurer,
-Secretary), and supported by the staff team who executes the day-to-day operations. State
-Central is made up of representatives from all Congressional Districts (elected at the District
-Conventions) and At-Large members (elected at the State Convention).</p>
-          <p>At the Congressional District Caucus, delegats who were elected at the County Caucus gather to elect the Congressional District delegates to the National Convention. This year Kentucky has 36, all of whom are elected at the Congressional District Caucus.</p>
-          <p>Each Congressional District's delegate allocation is based on Democratic Votes in the last Presidential Election and the most recent Gubernatorial Elections. The allocation breakdown looks like this:</p>
-          <table border="1">
-            <tr>
-              <th rowspan="2">CD</th>
-              <th colspan="3">Delegate</th>
-            </tr>
-            <tr>
-              <th>Male</th>
-              <th>Female</th>
-              <th>Total</th>
-            </tr>
-            <tr>
-              <td>#1</td>
-              <td>2</td>
-              <td>2</td>
-              <td>4</td>
-            </tr>
-            <tr>
-              <td>#2</td>
-              <td>2</td>
-              <td>3</td>
-              <td>5</td>
-            </tr>
-            <tr>
-              <td>#3</td>
-              <td>5</td>
-              <td>5</td>
-              <td>10</td>
-            </tr>
-            <tr>
-              <td>#4</td>
-              <td>3</td>
-              <td>3</td>
-              <td>6</td>
-            </tr>
-            <tr>
-              <td>#5</td>
-              <td>2</td>
-              <td>1</td>
-              <td>3</td>
-            </tr>
-            <tr>
-              <td>#6</td>
-              <td>4</td>
-              <td>4</td>
-              <td>8</td>
-            </tr>
-            <tr>
-              <td>Total</td>
-              <td>18</td>
-              <td>18</td>
-              <td>36</td>
-            </tr>
-          </table>
-        </div>
+        <p>Questions? You may e-mail the Kentucky Democratic Party at <a href="mailto:reorg@kydemocrats.org">reorg@kydemocrats.org</a>. Also, please <a href="https://secure.ngpvan.com/COAF9YlVOUWmwJyp0eBLfQ2">sign up here</a>, and watch your inbox for announcements of upcoming information sessions.</p>
       </div>
     </div>
   </div>
