updated exec committee and other changes

--- a/executive.html
+++ b/executive.html
@@ -17,7 +17,7 @@ title: Executive Committee
     </li>
   {% endfor %}
   </ul>
-  <div class="meeting">
+  <!-- <div class="meeting">
     <div class="meeting__info">Executive Committee meetings are held every third Tuesday of the month at 6:30 p.m. at the Stratton Community Center, 215 Washington Street, Shelbyville, KY. All Democrats are welcome to attend.
     </div>
     <div class="meeting__map">
@@ -35,5 +35,5 @@ title: Executive Committee
 
       </script>
     </div>
-  </div>
+  </div> -->
 </div>
