--- a/links.html
+++ b/links.html
@@ -9,34 +9,34 @@ title: Links
     <div class="link-list">
       <h2>Kentucky Democratic Party Websites</h2>
       <ul>
-        <li><a href="http://kydemocrat.com/" target="_blank">Kentucky Democratic Party</a></li>
-        <li><a href="http://www.kyyoungdems.com/" target="_blank">Kentucky Young Democrats</a></li>
-        <li><a href="http://www.louisvilledems.com/" target="_blank">Louisville Democratic Party</a></li>
-        <li><a href="http://fayettedemocrats.net/" target="_blank">Fayette County Democratic Party</a></li>
+        <li><a href="http://kydemocrat.com/" target="_blank" rel="noopener noreferrer">Kentucky Democratic Party</a></li>
+        <li><a href="http://www.kyyoungdems.com/" target="_blank" rel="noopener noreferrer">Kentucky Young Democrats</a></li>
+        <li><a href="http://www.louisvilledems.com/" target="_blank" rel="noopener noreferrer">Louisville Democratic Party</a></li>
+        <li><a href="http://fayettedemocrats.net/" target="_blank" rel="noopener noreferrer">Fayette County Democratic Party</a></li>
       </ul>
     </div>
     <div class="link-list">
       <h2>Kentucky Government Websites</h2>
       <ul>
-        <li><a href="http://kentucky.gov/" target="_blank">Kentucky Government</a></li>
-        <li><a href="http://lrc.ky.gov/" target="_blank">Kentucky Legislative Research Commission</a></li>
-        <li><a href="http://elect.ky.gov/Pages/default.aspx" target="_blank">Kentucky State Board of Elections</a></li>
-        <li><a href="http://www.shelbycountykentucky.com/" target="_blank">Shelby County Government</a></li>
-        <li><a href="http://www.shelbyvillekentucky.com/" target="_blank">Shelbyville Government</a></li>
-        <li><a href="http://www.cityofsimpsonvilleky.com/" target="_blank">Simpsonville Government</a></li>
-        <li><a href="http://www.shelbycountyclerk.com/" target="_blank">Shelby County Clerk</a></li>
+        <li><a href="http://kentucky.gov/" target="_blank" rel="noopener noreferrer">Kentucky Government</a></li>
+        <li><a href="https://legislature.ky.gov/Pages/" target="_blank" rel="noopener noreferrer">Kentucky Legislative Research Commission</a></li>
+        <li><a href="http://elect.ky.gov/Pages/default.aspx" target="_blank" rel="noopener noreferrer">Kentucky State Board of Elections</a></li>
+        <li><a href="http://www.shelbycountykentucky.com/" target="_blank" rel="noopener noreferrer">Shelby County Government</a></li>
+        <li><a href="http://www.shelbyvillekentucky.com/" target="_blank" rel="noopener noreferrer">Shelbyville Government</a></li>
+        <li><a href="http://www.cityofsimpsonvilleky.com/" target="_blank" rel="noopener noreferrer">Simpsonville Government</a></li>
+        <li><a href="http://www.shelbycountyclerk.com/" target="_blank" rel="noopener noreferrer">Shelby County Clerk</a></li>
       </ul>
     </div>
     <div class="link-list">
       <h2>National Democratic Websites</h2>
       <ul>
-        <li><a href="http://www.democrats.org/" target="_blank">Democratic National Committee (DNC)</a></li>
-        <li><a href="http://www.dscc.org/" target="_blank">Democratic Senatorial Campaign Committee (DSCC)</a></li>
-        <li><a href="http://dccc.org/" target="_blank">Democratic Congressional Campaign Committee (DCCC)</a></li>
-        <li><a href="https://democraticgovernors.org/" target="_blank">Democratic Governors Association (DGA)</a></li>
-        <li><a href="http://www.democraticwoman.org/" target="_blank">Woman's National Democratic Club</a></li>
-        <li><a href="http://d.yda.org/" target="_blank">Young Democrats of America</a></li>
-        <li><a href="http://collegedems.com/" target="_blank">College Democrats of America</a></li>
+        <li><a href="http://www.democrats.org/" target="_blank" rel="noopener noreferrer">Democratic National Committee (DNC)</a></li>
+        <li><a href="http://www.dscc.org/" target="_blank" rel="noopener noreferrer">Democratic Senatorial Campaign Committee (DSCC)</a></li>
+        <li><a href="http://dccc.org/" target="_blank" rel="noopener noreferrer">Democratic Congressional Campaign Committee (DCCC)</a></li>
+        <li><a href="https://democraticgovernors.org/" target="_blank" rel="noopener noreferrer">Democratic Governors Association (DGA)</a></li>
+        <li><a href="http://www.democraticwoman.org/" target="_blank" rel="noopener noreferrer">Woman's National Democratic Club</a></li>
+        <li><a href="http://d.yda.org/" target="_blank" rel="noopener noreferrer">Young Democrats of America</a></li>
+        <li><a href="http://collegedems.com/" target="_blank" rel="noopener noreferrer">College Democrats of America</a></li>
       </ul>
     </div>
   </div>
